--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.6
   go_router: ^14.2.0
   get_it: ^7.7.0
@@ -31,5 +33,5 @@ flutter:
     - assets/location.png
 
 flutter_intl:
-  main_locale: en_US
+  main_locale: pt_BR
   enabled: true
